--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.18",
+    "cheerio": "1.0.0-rc.12",
     "jest": "^29.7.0",
     "prettier": "^3.2.4",
     "ts-jest": "^29.1.2",
